[package]
name = "lumina_core"
version = "0.1.1"
edition = "2021"
default-run = "lumina"

[lib]
name = "lumina_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lumina"
path = "src/main.rs"
required-features = []

[features]
default = ["extension-module"]
extension-module = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.21.2", optional = true }

chrono = "0.4.31"
crossbeam-channel = "0.5"
colored = "2.1"
crossterm = "0.27"
regex = "1.10"
once_cell = "1.19"
ahash = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lz4_flex = "0.11"
byteorder = "1.5"
clap = { version = "4.4", features = ["derive", "env"] } 
anyhow = "1.0"
crc32fast = "1.3"
glob = "0.3"
fs2 = "0.4"
serde_json = "1.0.145"
ctrlc = "3.5.1"
sysinfo = "0.30"
indexmap = { version = "2.2", features = ["serde"] }
rustc-hash = "1.1"
libc = "0.2" 
memmap2 = "0.9.9"
num_cpus = "1.16" 

[profile.release]
opt-level = 3       
lto = "fat"         
codegen-units = 1   
panic = "abort"     
strip = true

[dev-dependencies]
tempfile = "3.10"